fix: clipped title in dark mode (#231)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -5,9 +5,3 @@ blockquote {
     padding: 0.5em 10px;
     quotes: "\201C" "\201D" "\2018" "\2019";
 }
-
-main {
-  .about {
-    padding-bottom: inherit;
-  }
-}
